# researcher-cli

./: .gitignore  .hone-gates.json  AGENTS.md  CHANGELOG.md  CHARTER.md  LICENSE  README.md  SKILL.md  SPEC.md  pyproject.toml
.claude/skills/deploy-skills/: SKILL.md
.github/workflows/: ci.yml  release.yml
audit/: cli-factory-injection-actions.md  cli-factory-injection-plan.md  cli-factory-injection.md
researcher/: asr_config.py  asr_config_spec.py  chunking.py  chunking_spec.py  config.py  config_spec.py  conftest.py  constants.py  docling_config.py  docling_config_spec.py  embedding_providers.py  embedding_providers_spec.py  model_registry.py  model_registry_spec.py  models.py  models_spec.py  path_exclusion.py  path_exclusion_spec.py  service_factory.py  service_factory_spec.py
researcher/bundled_skills/researcher-admin/: SKILL.md
researcher/cli/: config_commands.py  config_commands_spec.py  index_commands.py  index_commands_spec.py  init_commands.py  init_commands_spec.py  main.py  main_spec.py  model_commands.py  repo_commands.py  repo_commands_spec.py  search_commands.py  search_commands_spec.py
researcher/gateways/: checksum_gateway.py  chroma_gateway.py  chroma_gateway_spec.py  config_gateway.py  config_gateway_spec.py  docling_gateway.py  docling_gateway_spec.py  embedding_gateway.py  embedding_gateway_spec.py  filesystem_gateway.py  filesystem_gateway_spec.py
researcher/mcp/: server.py  server_spec.py
researcher/services/: index_service.py  index_service_spec.py  model_archive_service.py  model_archive_service_spec.py  repository_service.py  repository_service_spec.py  search_service.py  search_service_spec.py
skills/researcher-admin/: SKILL.md
skills/researcher-find/: SKILL.md
