[project]
name = "researcher-cli"
version = "0.1.0"
description = "CLI tool for indexing and searching document repositories"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Stacey Vetzal" }]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.0",
    "docling>=2.0.0",
    "typer>=0.20.0",
    "rich>=14.0.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "fastmcp>=2.0.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
researcher = "researcher.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["researcher"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["researcher"]
python_files = ["*_spec.py"]
python_classes = ["Describe*"]
python_functions = ["should_*"]
addopts = "--cov=researcher --cov-report=term-missing"

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
]
